style(ui): avoid consent page icon jumping
add default space container for the loading icon in the consent page

--- a/packages/ui/src/pages/Consent/index.module.scss
+++ b/packages/ui/src/pages/Consent/index.module.scss
@@ -6,3 +6,7 @@
   @include _.image-align-center;
   margin-bottom: _.unit(4);
 }
+
+.loadingHolder {
+  height: _.unit(12);
+}
